<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="number">N</string>
    <string name="type">Type</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="hundred">100%</string>
    <string name="p125">125%</string>
    <string name="money">Money</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="empty"></string>
    <string name="zero">0</string>
    <string name="empty_date">-/-</string>
    <string name="empty_time">--:--</string>
    <string name="title_activity_date_choise">DateChoiseActivity</string>
    <string name="ok">OK</string>

    <color name="red">#FF0000</color>
    <color name="set1_button_to">#5B7842</color>
    <color name="set1_button_from">#81A55F</color>
    <color name="set1_backgraund_1">#DDF6B5</color>
    <color name="set1_backgraund_for_choisen_cell">#5B7842</color>

    <!--
   <color name="set2_main_backgraund">#001B39</color> 
    <color name="set2_button_bottom">#052D60</color>
    <color name="set2_button_top">#0B4992</color>
    <color name="set2_button_text">#FFFFFF</color>
    <color name="set2_button_stroke">#163B67</color>
   <color name="set2_button_pressed_bottom">#FFFFFF</color>
    <color name="set2_button_pressed_top">#E0E0E0</color>
    <color name="set2_button_pressed_text">#7D908C</color>
    <color name="set2_actionbar_backgraund">#435D5A</color>
    <color name="set2_actionbar_text">#C8D7D4</color>
    <color name="set2_slidermenu_backgraund">#163B67</color>
    <color name="set2_slidermenu_text">#FFFFFF</color>
    <color name="set2_titles_backgraund">#0B4992</color>
    <color name="set2_titles_text">#FFFFFF</color>
    <color name="set2_backgraund_for_choisen_cell">#E0E0E0</color>
    <color name="set2_text_for_choisen_cell">#7D908C</color>
    <color name="set2_main_list_cell_backgraund">#FFFFFF</color>
    <color name="set2_main_list_backgraund">#001B39</color>
    -->

    <color name="set2_button_bottom">#00AFF0</color>
    <color name="set2_button_top">#00AFF0</color>
    <color name="set2_button_text">#FFFFFF</color>
    <color name="set2_button_stroke">#00AFF0</color>
    <color name="set2_main_backgraund">#E7DEDE</color>
    <!--
        <color name="set2_button_bottom">#757575</color>
    <color name="set2_button_top">#B3B3B3</color>
    <color name="set2_button_text">#000000</color>
    <color name="set2_button_stroke">#767676</color>
    -->
    <color name="set2_button_pressed_bottom">#757575</color>
    <color name="set2_button_pressed_top">#B3B3B3</color>
    <color name="set2_button_pressed_text">#000000</color>
    <color name="set2_actionbar_backgraund">#435D5A</color>
    <color name="set2_actionbar_text">#C8D7D4</color>
    <color name="set2_slidermenu_backgraund">#435D5A</color>
    <color name="set2_slidermenu_text">#C8D7D4</color>
    <color name="set2_titles_backgraund">#7E8E8B</color>
    <color name="set2_titles_text">#FFFFFF</color>
    <color name="set2_backgraund_for_choisen_cell">#B3B3B3</color>
    <color name="set2_text_for_choisen_cell">#7D908C</color>
    <color name="set2_main_list_cell_backgraund">#FFFFFF</color>
    <color name="set2_main_list_backgraund">#FFFFFF</color>

    <string name="title_activity_day_information">DayInformationActivity</string>
    <string name="prise">Prise</string>
    <string name="hours">Hours</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="monthly_information">Monthly report</string>
    <string name="settings">Settings</string>
    <string name="send_to_email">Send to email</string>
    <string name="shift_profiles">Shift profiles</string>
    <string name="shift_profile">Shift profile</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="main_profile">Main profile</string>
    <string name="add_profile">Add profile</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="profile_name">Profile name</string>
    <string name="prosent">Prosent</string>
    <string name="per_hour">Per hour</string>
    <string name="not_pay_braek">Not pay braek(min)</string>
    <string name="award">Award</string>
    <string name="flow">Flow</string>
    <string name="vacation_pay_per_day">Vacation pay per day</string>
    <string name="sick_pay_per_day">Sick pay per day</string>
    <string name="first_day">First day</string>
    <string name="prosent_sign">%</string>
    <string name="second_day">Second day</string>
    <string name="last_day">Last day</string>
    <string name="save">Save</string>
    <string name="title_activity_month_information">MonthInformationActivity</string>
    <string name="remember_the_choise_and_dont_ask_again">Remember the choise and dont ask again</string>
    <string name="self">self</string>
    <string name="change_procents">Change prosents</string>
    <string name="travel_per_day">Travel per day</string>
    <string name="travel_per_month">Travel per month</string>
    <string name="add_row">Add row</string>
    <string name="title_activity_procent_edit">ProcentEditActivity</string>
    <string name="weekday">Weekday</string>
    <string name="weekend">Weekend</string>
    <string name="holiday">Holiday</string>
    <string name="sickday">Sickday</string>
    <string name="vacation">Vacation</string>
    <string name="weekend_or_holiday">Weekend or Holiday</string>
    <string name="pay_per_day">Pay per day</string>
    <string name="pay_per_hour">Pay per hour</string>
    <string name="pay_per_hour_or_day">Pay per hour or day</string>
    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="open_full_edit">Open full edit</string>
    <string name="preview">&lt;</string>
    <string name="next_sing">></string>
    <string name="work_days">Work days</string>
    <string name="vacation_days">Vacation days</string>
    <string name="sick_days">Sick days</string>
    <string name="days">Days</string>
    <string name="email_settings">Email settings</string>
    <string name="month_total">Month total</string>
    <string name="email_address">Email address</string>
    <string name="save_address">Save address</string>
    <string name="get_address_from_list">Get address from list</string>
    <string name="month_for_sending">Month for sending</string>
    <string name="choise_kind_of_file_for_send">Choise kind of file for send</string>
    <string name="text">Text</string>
    <string name="excel">Excel</string>
    <string name="send">Send</string>
    <string name="warning">WARNING</string>
    <string name="shift_type">Shift type</string>
    <string name="address_saved">Address saved</string>
    <string name="start_time_format_error">Start time format ERROR</string>
    <string name="end_time_format_error">End time format ERROR</string>
    <string name="start_date_format_error">Start date format ERROR</string>
    <string name="end_date_format_error">End date format ERROR</string>
    <string name="start_more_than_end">Start more than end ERROR</string>
    <string name="amount_of_hours_more_than_24">Amount of hours more than 24.</string>
    <string name="edit_procents">Edit prosents</string>
    <string name="payment_method_day_hour">Payment method Day/Hour</string>
    <string name="travel_payment_method_month_day">Travel payment method Month/Day</string>
    <string name="alredy_exist">Alredy exist</string>
    <string name="do_you_want_to_replace_those_profiles">Do you want to replace those profiles?</string>
    <string name="holiday_pay_per">Holiday pay per</string>
    <string name="the_data_not_filled_correctle">The data not filled correctle</string>
    <string name="minutes">minutes</string>
    <string name="lenguage">Lenguage</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="hebrow">עברית</string>
    <string name="title_activity_lenguage">LenguageActivity</string>
    <string name="shift">Shift</string>
    <string name="shifts_list">Shifts list</string>
    <string name="shift_edit">Shift edit</string>
    <string name="shift_profile_edit">Shift profile edit</string>
    <string name="prosents_edit">Procents edit</string>
    <string name="email">Email</string>
    <string name="add_shift">Add shift</string>
    <string name="hour">Hour</string>
    <string name="month">Month</string>
    <string name="profile">Profile</string>
    <string name="shift1">shift</string>

</resources>
