<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutMLC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:background="@color/set2_main_list_cell_backgraund"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/linearLayoutMLC_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextViewMLC_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/empty_date" />

        <TextView
            android:id="@+id/TextViewMLC_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/day" />

    </LinearLayout>

        <TextView
            android:id="@+id/TextViewMLC_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/set" />

        <TextView
            android:id="@+id/TextViewMLC_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/TextViewMLC_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/TextViewMLC_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/TextViewMLC_many"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/zero" />

</LinearLayout>
